tests/fixtures/invalid/errors/datetime_timezone_non_datetime.gcl
// Error: timezone display on a non-Datetime value
node x: Dimensionless = 42.0;
node y: Dimensionless = @x -> "Asia/Tokyo";
